--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a class="link" href="index.html">Главная</a></li>
+          <li><a class="link" href="#">Компания</a></li>
+          <li><a class="link" href="catalog.html">Каталог</a></li>
+          <li><a class="link" href="#">Новости</a></li>
+          <li><a class="link" href="#">Спецпредложения</a></li>
+          <li><a class="link" href="#">Доставка</a></li>
+          <li><a class="link" href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -56,25 +56,25 @@
       <section class="stock">
         <h2 class="visually-hidden">Акции и предложения</h2>
         <ul class="list">
-          <li class="item new">
+          <li class="item background-orange new">
             <h3>Материалы</h3>
-            <a href="#">На любой вкус</a>
+            <a href="#" class="button">На любой вкус</a>
           </li>
-          <li class="item">
+          <li class="item background-blue">
             <h3>Инструменты</h3>
-            <a href="#">На все случаи</a>
+            <a href="#" class="button">На все случаи</a>
           </li>
-          <li class="item">
+          <li class="item background-purple">
             <h3>Техника</h3>
-            <a href="#">Для стройки</a>
+            <a href="#" class="button">Для стройки</a>
           </li>
-          <li class="item">
+          <li class="item background-green">
             <h3>Скидки 50%</h3>
-            <a href="#">На 350 товаров</a>
+            <a href="#" class="button">На 350 товаров</a>
           </li>
-          <li class="item">
+          <li class="item background-orange">
             <h3>Доставка</h3>
-            <a href="#">Бесплатно</a>
+            <a href="#" class="button">Бесплатно</a>
           </li>
         </ul>
         <section class="slider">
@@ -83,22 +83,22 @@
             <li class="arrow-right"><button>Следующий слайд</button></li>
             <li class="arrow-left"><button>Предыдущий слайд</button></li>
           </ul>
-          <ul class="list">
-            <li class="item">
+          <ul class="slider-list">
+            <li class="slide">
               <img src="img/slide_1.jpg" alt="Дрели">
               <div class="caption">
                 <h3>Дрели</h3>
-                <p>Соседям на радость</p>
+                <p>Соседям на радость!</p>
               </div>
-              <a href="#">Открыть каталог</a>
+              <a href="#" class="button button-red">Открыть каталог</a>
             </li>
-            <li class="item">
+            <li class="slide">
               <img src="img/slide_2.jpg" alt="Перфораторы">
               <div class="caption">
                 <h3>Перфораторы</h3>
                 <p>Настоящие мужские игрушки</p>
               </div>
-              <a href="#">Открыть каталог</a>
+              <a href="#" class="button button-red">Открыть каталог</a>
             </li>
           </ul>
           <ul class="dots">
@@ -109,8 +109,10 @@
       </section>
 
       <section class="popular-section products">
-        <h2>Популярные товары:</h2>
-        <a href="#">Все популярные товары</a>
+        <div class="heading">
+          <h2>Популярные товары:</h2>
+          <a href="#" class="button button-red">Все популярные товары</a>
+        </div>
         <ul class="list">
           <li class="item">
             <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
@@ -118,8 +120,8 @@
             <p class="old-price">32500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <button>Купить</button>
-              <button>В закладки</button>
+              <button class="button button-green">Купить</button>
+              <button class="button button-border-green">В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -128,8 +130,8 @@
             <p class="old-price">22500 Р.</p>
             <p class="price">15500 Р.</p>
             <div class="buttons hidden">
-              <button>Купить</button>
-              <button>В закладки</button>
+              <button class="button button-green">Купить</button>
+              <button class="button button-border-green">В закладки</button>
             </div>
           </li>
           <li class="item">
@@ -138,8 +140,8 @@
             <p class="old-price">30500 Р.</p>
             <p class="price">25500 Р.</p>
             <div class="buttons hidden">
-              <button>Купить</button>
-              <button>В закладки</button>
+              <button class="button button-green">Купить</button>
+              <button class="button button-border-green">В закладки</button>
             </div>
           </li>
           <li class="item new">
@@ -147,16 +149,18 @@
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
             <div class="buttons hidden">
-              <button>Купить</button>
-              <button>В закладки</button>
+              <button class="button button-green">Купить</button>
+              <button class="button button-border-green">В закладки</button>
             </div>
           </li>
         </ul>
       </section>
 
       <section class="popular-section manufacturers">
-        <h2>Популярные производители:</h2>
-        <a href="#">Все производители</a>
+        <div class="heading">
+          <h2>Популярные производители:</h2>
+          <a href="#" class="button button-red">Все производители</a>
+        </div>
         <ul class="list">
           <li class="item">
             <a href="#"><img src="img/bosch.jpg" alt="BOSCH"></a>
@@ -190,9 +194,9 @@
         <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
         <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <ul class="tabs">
-          <li class="tab"><a href="#">Доставка</a></li>
-          <li class="tab"><a href="#">Гарантия</a></li>
-          <li class="tab"><a href="#">Кредит</a></li>
+          <li><button class="tab active">Доставка</button></li>
+          <li><button class="tab">Гарантия</button></li>
+          <li><button class="tab">Кредит</button></li>
         </ul>
         <ul class="tabs-content">
           <li class="tab-content">
@@ -219,14 +223,14 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#">Подробнее о компании</a>
+        <a href="#" class="button button-red">Подробнее о компании</a>
       </section>
 
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <img src="img/mini_map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-        <a href="#">Заблудились? Напишите нам!</a>
+        <a href="#" class="button button-red">Заблудились? Напишите нам!</a>
       </section>
     </main>
 
@@ -254,13 +258,13 @@
         <p class="copyright">© 2010–2017 Компания «Техномарт» Все права защищены</p>
         <ul class="social-buttons">
           <li>
-            <span class="visually-hidden"><a href="#">Vkontakte</a></span>
+            <a href="#"><span class="visually-hidden">Vkontakte</span></a>
           </li>
           <li>
-            <span class="visually-hidden"><a href="#">Facebook</a></span>
+            <a href="#"><span class="visually-hidden">Facebook</span></a>
           </li>
           <li>
-            <span class="visually-hidden"><a href="#">Instagram</a></span>
+            <a href="#"><span class="visually-hidden">Instagram</span></a>
           </li>
         </ul>
         <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
@@ -289,9 +293,9 @@
           <textarea id="message-callback" name="message" placeholder="В свободной форме">
           </textarea>
         </p>
-        <p>
-          <button type="submit">Отправить</button>
-        </p>
+        <footer class="modal-footer">
+          <button type="submit" class="button button-red">Отправить</button>
+        </footer>
       </form>
     </section>
   </body>
