--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
         </form>
         <ul class="menu">
-          <li><a href="#" class="bookmark">Закладки: 0</a></li>
-          <li><a href="#" class="cart">Корзина: 0</a></li>
-          <li><a href="#" class="checkout">Оформить заказ</a></li>
+          <li><a href="#" class="link bookmark">Закладки: 0</a></li>
+          <li><a href="#" class="link cart">Корзина: 0</a></li>
+          <li><a href="#" class="link checkout">Оформить заказ</a></li>
         </ul>
       </section>
 
@@ -108,7 +108,7 @@
         </section>
       </section>
 
-      <section class="popular-section products">
+      <section class="popular-section popular-products">
         <div class="heading">
           <h2>Популярные товары:</h2>
           <a href="#" class="button button-red">Все популярные товары</a>
