--- a/catalog.html
+++ b/catalog.html
@@ -17,9 +17,9 @@
           <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
         </form>
         <ul class="menu">
-          <li><a href="#" class="bookmark">Закладки: 0</a></li>
-          <li><a href="#" class="cart cart-red">Корзина: 10</a></li>
-          <li><a href="#" class="checkout">Оформить заказ</a></li>
+          <li><a href="#" class="link bookmark">Закладки: 0</a></li>
+          <li><a href="#" class="link cart cart-red">Корзина: 10</a></li>
+          <li><a href="#" class="link checkout">Оформить заказ</a></li>
         </ul>
       </section>
 
@@ -54,10 +54,10 @@
     <main class="container">
       <section class="breadcrumbs">
         <ul class="list">
-          <li class="item"><a href="#">Главная</a></li>
-          <li class="item"><a href="#">Каталог</a></li>
-          <li class="item"><a href="#">Инструмент</a></li>
-          <li class="item"><a>Перфораторы</a></li>
+          <li><a href="#" class="link">Главная</a></li>
+          <li><a href="#" class="link">Каталог</a></li>
+          <li><a href="#" class="link">Инструмент</a></li>
+          <li><a class="link">Перфораторы</a></li>
         </ul>
       </section>
 
@@ -307,7 +307,7 @@
       <h2>Товар добавлен в корзину!</h2>
       <footer class="modal-footer">
         <a href="#" class="button button-red">Оформить заказ</a>
-        <button class="button modal-close">Продолжить покупки</button>
+        <button class="button button-close">Продолжить покупки</button>
       </footer>
     </section>
 
