--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
   <body>
     <header class="main-header">
       <section class="top-navigation">
-        <div class="container">
+        <div class="container flex-container">
           <a href="#" class="logo">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="search-field">Поиск</label>
             <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
+            <span class="icon-search">
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+              </svg>
+            </span>
           </form>
           <ul class="menu">
             <li><a href="#" class="link bookmark">Закладки: 0</a></li>
@@ -27,17 +32,15 @@
 
       <div class="container">
         <section class="about-store">
-          <div class="tagline-wrapper">
-            <p class="tagline">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-          </div>
+          <p class="tagline">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
           <div class="contacts">
             <p class="telephone">+7 (812) 555-05-55</p>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="user">
             <ul class="navigation">
-              <li class="login"><a href="#" class="link">Войти</a></li>
-              <li class="signin"><a href="#" class="link">Регистрация</a></li>
+              <li><a href="#" class="link login">Войти</a></li>
+              <li><a href="#" class="link signin">Регистрация</a></li>
             </ul>
           </div>
         </section>
@@ -63,119 +66,135 @@
         <section class="stock">
           <h2 class="visually-hidden">Акции и предложения</h2>
           <ul class="list">
-            <li class="item background-orange new">
+            <li class="item bg-color-orange bg-img-icon-1 new">
               <h3>Материалы</h3>
               <a href="#" class="button">На любой вкус</a>
             </li>
-            <li class="item background-blue">
-              <h3>Инструменты</h3>
+            <li class="item bg-color-blue bg-img-icon-2">
+              <h3>Инструмент</h3>
               <a href="#" class="button">На все случаи</a>
             </li>
-            <li class="item background-purple">
+            <li class="item bg-color-purple bg-img-icon-3">
               <h3>Техника</h3>
               <a href="#" class="button">Для стройки</a>
             </li>
-            <li class="item background-green">
-              <h3>Скидки 50%</h3>
-              <a href="#" class="button">На 350 товаров</a>
-            </li>
-            <li class="item background-orange">
-              <h3>Доставка</h3>
-              <a href="#" class="button">Бесплатно</a>
-            </li>
           </ul>
-          <section class="slider">
-            <h2 class="visually-hidden">Инструменты</h2>
-            <ul class="arrows">
-              <li class="arrow-right"><button>Следующий слайд</button></li>
-              <li class="arrow-left"><button>Предыдущий слайд</button></li>
-            </ul>
-            <ul class="slider-list">
-              <li class="slide">
-                <img src="img/slide_1.jpg" alt="Дрели">
-                <div class="caption">
-                  <h3>Дрели</h3>
-                  <p>Соседям на радость!</p>
-                </div>
-                <a href="#" class="button button-red">Открыть каталог</a>
+          <div class="slider-wrapper">
+            <section class="slider">
+              <h2 class="visually-hidden">Инструменты</h2>
+              <ul class="arrows">
+                <li><button class="arrow-right"><span class="visually-hidden">Следующий слайд</span></button></li>
+                <li><button class="arrow-left"><span class="visually-hidden">Предыдущий слайд</span></button></li>
+              </ul>
+              <ul class="slider-list">
+                <li class="slide">
+                  <div class="caption">
+                    <h3>Перфораторы</h3>
+                    <p>Настоящие мужские игрушки</p>
+                  </div>
+                  <img src="img/slide_1.jpg" alt="Дрели">
+                  <a href="#" class="button button-red">Открыть каталог</a>
+                </li>
+                <li class="slide active">
+                  <div class="caption">
+                    <h3>Дрели</h3>
+                    <p>Соседям на радость!</p>
+                  </div>
+                  <img src="img/slide_2.jpg" alt="Перфораторы">
+                  <a href="#" class="button button-red">Открыть каталог</a>
+                </li>
+              </ul>
+              <ul class="dots">
+                <li><button class="dot"><span class="visually-hidden">1 слайд</span></button></li>
+                <li><button class="dot active"><span class="visually-hidden">2 слайд</span></button></li>
+              </ul>
+            </section>
+            <ul class="list">
+              <li class="item bg-color-green bg-img-icon-4">
+                <h3>Скидки 50%</h3>
+                <a href="#" class="button">На 350 товаров</a>
               </li>
-              <li class="slide">
-                <img src="img/slide_2.jpg" alt="Перфораторы">
-                <div class="caption">
-                  <h3>Перфораторы</h3>
-                  <p>Настоящие мужские игрушки</p>
-                </div>
-                <a href="#" class="button button-red">Открыть каталог</a>
+              <li class="item bg-color-orange bg-img-icon-5">
+                <h3>Доставка</h3>
+                <a href="#" class="button">Бесплатно</a>
               </li>
             </ul>
-            <ul class="dots">
-              <li class="dot"><button>1 слайд</button></li>
-              <li class="dot active"><button>2 слайд</button></li>
-            </ul>
-          </section>
+          </div>
         </section>
-      </div>
 
-      <section class="tile-section tile-section-4-col popular-products">
-        <div class="heading">
-          <div class="container">
+
+        <section class="popular-products tile-section tile-section-4-col product-list">
+          <div class="heading">
             <h2>Популярные товары:</h2>
             <a href="#" class="button button-red">Все популярные товары</a>
           </div>
-        </div>
-        <div class="container">
           <ul class="list">
             <li class="item">
-              <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
-              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <div class="actions">
+                <button class="button button-green">Купить</button>
+                <button class="button button-border-green">В закладки</button>
+              </div>
+              <div class="image">
+                <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
               <p class="old-price">32500 Р.</p>
-              <p class="price">25500 Р.</p>
-              <div class="buttons hidden">
+              <span class="price-wrapper">
+                <p class="price">25500 Р.</p>
+              </span>
+            </li>
+
+            <li class="item">
+              <div class="actions">
                 <button class="button button-green">Купить</button>
                 <button class="button button-border-green">В закладки</button>
               </div>
-            </li>
-            <li class="item">
-              <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <div class="image">
+                <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price">22500 Р.</p>
-              <p class="price">15500 Р.</p>
-              <div class="buttons hidden">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
-              </div>
+              <span class="price-wrapper">
+                <p class="price">15500 Р.</p>
+              </span>
             </li>
+
             <li class="item">
-              <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <div class="actions">
+                <button class="button button-green">Купить</button>
+                <button class="button button-border-green">В закладки</button>
+              </div>
+              <div class="image">
+                <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
               <p class="old-price">30500 Р.</p>
-              <p class="price">25500 Р.</p>
-              <div class="buttons hidden">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
-              </div>
+              <span class="price-wrapper">
+                <p class="price">25500 Р.</p>
+              </span>
             </li>
+
             <li class="item new">
-              <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p class="price">12500 Р.</p>
-              <div class="buttons hidden">
+              <div class="actions">
                 <button class="button button-green">Купить</button>
                 <button class="button button-border-green">В закладки</button>
               </div>
+              <div class="image">
+                <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+              <span class="price-wrapper">
+                <p class="price">12500 Р.</p>
+              </span>
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
 
-      <section class="tile-section tile-section-4-col manufacturers">
-        <div class="heading">
-          <div class="container">
+        <section class="tile-section tile-section-4-col manufacturers">
+          <div class="heading">
             <h2>Популярные производители:</h2>
             <a href="#" class="button button-red">Все производители</a>
           </div>
-        </div>
-        <div class="container">
           <ul class="list">
             <li class="item">
               <a href="#"><img src="img/bosch.jpg" alt="BOSCH"></a>
@@ -202,8 +221,8 @@
               <a href="#"><img src="img/Metabo.jpg" alt="Metabo"></a>
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
+      </div>
 
       <section class="description-section services">
         <div class="container">
@@ -217,17 +236,18 @@
               <li><button class="tab">Кредит</button></li>
             </ul>
             <ul class="tabs-content">
-              <li class="tab-content">
+              <li class="tab-content bg-img-delivery active">
                 <h3>Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
               </li>
-              <li class="tab-content">
+              <li class="tab-content bg-img-guarantee">
                 <h3>Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+                <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированного его возгаранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
               </li>
-              <li class="tab-content">
+              <li class="tab-content bg-img-credit">
                 <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
+                <a href="#" class="button button-red">Отправить заявку</a>
               </li>
             </ul>
           </div>
@@ -249,8 +269,10 @@
 
         <section class="contacts">
           <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <img src="img/mini_map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+          <div class="mini-map">
+            <img src="img/mini_map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          </div>
           <a href="#" class="button button-red">Заблудились? Напишите нам!</a>
         </section>
       </div>
@@ -283,13 +305,13 @@
           <p class="copyright">© 2010–2017 Компания «Техномарт» Все права защищены</p>
           <ul class="social-buttons">
             <li>
-              <a href="#"><span class="visually-hidden">Vkontakte</span></a>
+              <a href="#" class="icon-vk"><span class="visually-hidden">Vkontakte</span></a>
             </li>
             <li>
-              <a href="#"><span class="visually-hidden">Facebook</span></a>
+              <a href="#" class="icon-fb"><span class="visually-hidden">Facebook</span></a>
             </li>
             <li>
-              <a href="#"><span class="visually-hidden">Instagram</span></a>
+              <a href="#" class="icon-insta"><span class="visually-hidden">Instagram</span></a>
             </li>
           </ul>
           <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
@@ -299,12 +321,12 @@
     </footer>
 
     <div class="container">
-      <section class="modal modal-map">
+      <section class="modal modal-map hidden">
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
         <img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
       </section>
 
-      <section class="modal modal-callback">
+      <section class="modal modal-callback hidden">
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
         <form class="callback-form" action="https://echo.htmlacademy.ru" method="post">
           <p>
