--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <section class="top-navigation">
         <div class="container flex-container">
-          <a href="#" class="logo">Техномарт</a>
+          <a href="index.html" class="logo">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="search-field">Поиск</label>
             <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
@@ -203,9 +203,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item">
@@ -218,9 +218,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item new">
@@ -232,9 +232,9 @@
                       <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">12500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item">
@@ -247,9 +247,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item new">
@@ -262,9 +262,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item">
@@ -276,9 +276,9 @@
                       <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">12500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item new">
@@ -291,9 +291,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item">
@@ -306,9 +306,9 @@
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
-                    </span>
+                    </div>
                   </li>
 
                   <li class="item">
@@ -320,9 +320,9 @@
                       <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-                    <span class="price-wrapper">
+                    <div class="price-wrapper">
                       <p class="price">12500 Р.</p>
-                    </span>
+                    </div>
                   </li>
                 </ul>
               </section>
@@ -390,7 +390,9 @@
             </li>
           </ul>
           <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
-          <p class="author">Разработанно -<br><a href="#">htmlacademy.ru</a></p>
+          <p class="author">Разработанно -<br>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
+          </p>
         </div>
       </section>
     </footer>
@@ -398,7 +400,10 @@
     <div class="container">
       <section class="modal modal-cart hidden">
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <h2>Товар добавлен в корзину!</h2>
+        <div class="modal-body">
+          <span class="icon-accept"></span>
+          <h2>Товар добавлен в корзину!</h2>
+        </div>
         <footer class="modal-footer">
           <a href="#" class="button button-red">Оформить заказ</a>
           <button class="button button-close">Продолжить покупки</button>
