fix img width height

--- a/catalog.html
+++ b/catalog.html
@@ -199,7 +199,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
+                      <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
@@ -214,7 +214,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
+                      <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
@@ -229,7 +229,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
+                      <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
                     <div class="price-wrapper">
@@ -243,7 +243,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
+                      <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
@@ -258,7 +258,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
+                      <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
@@ -273,7 +273,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
+                      <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
                     <div class="price-wrapper">
@@ -287,7 +287,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
+                      <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
                     <p class="old-price">22500 Р.</p>
@@ -302,7 +302,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
+                      <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
                     <p class="old-price">30500 Р.</p>
@@ -317,7 +317,7 @@
                       <button class="button button-border-green">В закладки</button>
                     </div>
                     <div class="image">
-                      <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
+                      <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
                     <div class="price-wrapper">
