--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h3>Перфораторы</h3>
                     <p>Настоящие мужские игрушки</p>
                   </div>
-                  <img src="img/slide_1.jpg" alt="Дрели">
+                  <img src="img/slide_1.jpg" width="620" height="266" alt="Дрели">
                   <a href="catalog.html" class="button button-red">Открыть каталог</a>
                 </li>
                 <li class="slide active">
@@ -100,7 +100,7 @@
                     <h3>Дрели</h3>
                     <p>Соседям на радость!</p>
                   </div>
-                  <img src="img/slide_2.jpg" alt="Перфораторы">
+                  <img src="img/slide_2.jpg" width="620" height="266" alt="Перфораторы">
                   <a href="catalog.html" class="button button-red">Открыть каталог</a>
                 </li>
               </ul>
@@ -135,7 +135,7 @@
                 <button class="button button-border-green">В закладки</button>
               </div>
               <div class="image">
-                <img src="img/product_1.jpg" alt="Перфоратор BOSCH BFG 9000">
+                <img src="img/product_1.jpg" width="184" height="81" alt="Перфоратор BOSCH BFG 9000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
               <p class="old-price">32500 Р.</p>
@@ -150,7 +150,7 @@
                 <button class="button button-border-green">В закладки</button>
               </div>
               <div class="image">
-                <img src="img/product_2.jpg" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price">22500 Р.</p>
@@ -165,7 +165,7 @@
                 <button class="button button-border-green">В закладки</button>
               </div>
               <div class="image">
-                <img src="img/product_3.jpg" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
               <p class="old-price">30500 Р.</p>
@@ -180,7 +180,7 @@
                 <button class="button button-border-green">В закладки</button>
               </div>
               <div class="image">
-                <img src="img/product_4.jpg" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
               <div class="price-wrapper">
@@ -197,28 +197,28 @@
           </div>
           <ul class="list">
             <li class="item">
-              <a href="#"><img src="img/bosch.jpg" alt="BOSCH"></a>
+              <a href="#"><img src="img/bosch.jpg" width="126" height="37" alt="BOSCH"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/Makita.jpg" alt="Makita"></a>
+              <a href="#"><img src="img/Makita.jpg" width="123" height="40" alt="Makita"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/DeWALT.jpg" alt="DeWALT"></a>
+              <a href="#"><img src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/Interskol.jpg" alt="Интерскол"></a>
+              <a href="#"><img src="img/Interskol.jpg" width="184" height="32" alt="Интерскол"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/Hitachi.jpg" alt="Hitachi"></a>
+              <a href="#"><img src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/LG.jpg" alt="LG"></a>
+              <a href="#"><img src="img/LG.jpg" width="121" height="73" alt="LG"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/AEG.jpg" alt="AEG"></a>
+              <a href="#"><img src="img/AEG.jpg" width="151" height="96" alt="AEG"></a>
             </li>
             <li class="item">
-              <a href="#"><img src="img/Metabo.jpg" alt="Metabo"></a>
+              <a href="#"><img src="img/Metabo.jpg" width="204" height="69" alt="Metabo"></a>
             </li>
           </ul>
         </section>
@@ -273,7 +273,7 @@
           <div class="mini-map">
             <a href="https://www.google.com/maps" target="_blank">
               <span class="visually-hidden">Ссылка на сервис карт</span>
-              <img src="img/mini_map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+              <img src="img/mini_map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             </a>
           </div>
           <a href="#" class="button button-red">Заблудились? Напишите нам!</a>
@@ -328,7 +328,7 @@
     <div class="container">
       <section class="modal modal-map hidden">
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <img src="img/map.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
       </section>
 
       <section class="modal modal-callback hidden">
