--- a/catalog.html
+++ b/catalog.html
@@ -97,12 +97,12 @@
                     <div class="price">
                       <label>
                         <span class="visually-hidden">Минимальное значение цены</span>
-                        <input class="min" type="number" value="0">
+                        <input class="min" type="text" value="0">
                       </label>
                       <span>—</span>
                       <label>
                         <span class="visually-hidden">Максимальное значение цены</span>
-                        <input class="max" type="number" value="30000">
+                        <input class="max" type="text" value="30000">
                       </label>
                     </div>
                   </fieldset>
@@ -344,11 +344,8 @@
       <section class="description-section about-product">
         <div class="container">
           <h2>Пара слов о перфораторах</h2>
-          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
-            бетоне и камне.</p>
-          <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
-            шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут
-            совмещены отбойный молоток и ударная дрель.</p>
+          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
+          <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
       </section>
     </main>
